[package]
name = "multiplication-karatsuba"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Stepan Dolgorukov <dolgorukovpro@gmail.com>"]

[[bin]]
name = "muka"
path = "main.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[dependencies]
num-bigint = "0.4.6"
anyhow = "1.0.98"
